<resources>

    <string name="app_name">Calculator</string>

    <string name="dot">.</string>
    <string name="reset">c</string>
    <string name="bs">BS</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sub">-</string>
    <string name="plus">+</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="remaining">%</string>
    <string name="point">.</string>
    <string name="pos_neg">+/-</string>
    <string name="equals">=</string>
    <string name="error">Error</string>
    <string name="back_space">back Space</string>
    <string name="play_sound">Play Sound</string>
    <string name="history">History</string>
    <string name="close">Close</string>
    <string name="clear_history">Clear History</string>
    <string name="feet">Ft</string>
    <string name="in">In</string>
    <string name="fraction">x/y</string>
    <string name="change_color">Change Color</string>
    <string name="In_to_MM">In-mm</string>
    <string name="MM_to_In">mm-In</string>
    <string name="c">C</string>
    <string name="clearconv">Clear Conversion</string>
    <string name="show_overlay">Show Overlay</string>

</resources>
